Improved sorting method - no longer case sensitive. Overdue logic moved to the Overdue directive. Improved readability of the code.

--- a/src/app/todos/components/todo-list/todo-list.component.scss
+++ b/src/app/todos/components/todo-list/todo-list.component.scss
@@ -3,7 +3,6 @@
 :host {
   display: block;
   width: 100%;
-  padding: 0 2rem;
 
   .todo:not(:last-child) {
     border-bottom: $todo-border-bottom;
